--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -48,5 +48,5 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "Automated update: Refresh usage data"
-            git push
+            git push "https://${{ github.actor }}:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git" HEAD:main
           fi
