--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install zhipuai
+          pip install zhipuai sniffio
 
       - name: Fetch usage data
         id: fetch-data
